Fixed Style Issue on Mobile Devices

--- a/src/index.css
+++ b/src/index.css
@@ -693,7 +693,7 @@ Homepage Styling
   inset: 0;
   z-index: 5;
   position: absolute;
-  background-color: hsl(0 0% 0% / 0.35);
+  background-color: #00000059;
 }
 
 .search-user-modal .header {
@@ -867,7 +867,7 @@ Homepage Styling
   inset: 0;
   z-index: 10;
   position: absolute;
-  background-color: hsl(0 0% 0% / 0.35);
+  background-color: #00000059;
 }
 
 .feedpost-comments-modal-body {
@@ -1088,7 +1088,7 @@ Profile Page styling
   visibility: hidden;
   align-items: center;
   justify-content: center;
-  background-color: hsl(0 0 0 / 0.5);
+  background-color: #00000080;
 }
 
 .profile-post .overlay.overlay-hide {
@@ -1111,7 +1111,7 @@ Profile Page styling
   inset: 0;
   display: none;
   position: absolute;
-  background-color: hsl(0 0 0 / 0.5);
+  background-color: #00000080;
 }
 
 .profile-modal-overlay.modal-shown {
